<resources>
    <!-- App Name -->
    <string name="app_name">iPolluSense</string>

    <!-- Navigation Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Navigation Drawer Header -->
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="select_device">Select Device</string>
    <string-array name="modifier_options">
        <item>health</item>
        <item>comfort</item>
        <item>balanced</item>
    </string-array>

    <string-array name="appliance_options">
        <item>Fan</item>
        <item>Window</item>
    </string-array>
    <!-- Settings -->
    <string name="action_settings">Settings</string>
    <string-array name="gender_options">
        <item>Gender</item>  <!-- Default non-selectable item -->
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>


    <!-- Section Titles -->
    <string name="title_home">Home</string>

    <string name="title_map">Map</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="exposure_title">Exposure at a Glance</string>
    <string name="insights_title">Insights</string>
    <string name="title_assistant">Assistant</string>

    <!-- Button Texts -->

    <string name="annotate_button">Annotate</string>
    <string name="check_sensor_health_button">Check Sensor Health</string>

    <!-- Status Texts -->
    <string name="good_status">GOOD</string>
    <string name="warning_status">Warning: Check Levels!</string>
    <string name="danger_status">Dangerous Levels!</string>
    <string name="user_button_desc">User Button</string>
    <string name="notification_button_desc">Notification Button</string>
    <string name="battery_icon_desc">Battery Icon</string>
    <string name="fab_desc">Add</string>
    <!-- Accessibility Descriptions -->
    <string name="notification_icon_desc">Notifications</string>
    <string name="sensor_health_icon_desc">Sensor Health Status</string>


    <!-- Menu Items -->
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="options" />
    <string name="fab" />
    <string name="default_web_client_id">YOUR_WEB_CLIENT_ID_HERE</string>

    <string name="title_Map" />
    <string name="ipollusen" />
    <string name="ipollusense" />
    <string name="add" />
    <string name="rooms" />
    <string name="menu_appliance" />
    <string name="welcome_to_ipollusense">Welcome to iPolluSense</string>
    <string name="splash_image_desc" />

    <string-array name="device_options">
        <item>Select a device</item>
        <item>Add New Device</item>
    </string-array>

</resources>
